--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     "express": "^4.17.1",
     "netlify-lambda": "^1.6.3",
     "nodemon": "^1.19.2",
-    "serverless-http": "^2.3.0"
+    "serverless-http": "^2.3.0",
+    "multer": "^1.4.2",
+    "node-forge": "^0.9.1",
+    "node-signpdf": "github:therpobinski/node-signpdf",
+    "cors": "^2.8.5"
   }
 }
